refactor: Rebuild schema pages

--- a/pages/about/brands.mdx
+++ b/pages/about/brands.mdx
@@ -1,12 +1,12 @@
-# 🎨 Brands
+# Brands
 
 We're creating a set of brand for VitNode. You can use them to promote VitNode.
 
 ## Logo
 
 <div className="flex gap-5 [&>div]:flex-1 [&>div]:p-5 [&>div]:rounded-sm my-5">
-  <div style={{ backgroundColor: '#0a0a0a', color: '#fafafa' }}>test</div>
-  <div style={{ backgroundColor: '#fafafa', color: '#0a0a0a' }}>test</div>
+  <div style={{ backgroundColor: "#0a0a0a", color: "#fafafa" }}>test</div>
+  <div style={{ backgroundColor: "#fafafa", color: "#0a0a0a" }}>test</div>
 </div>
 
 ## Icon
@@ -51,19 +51,19 @@ We're creating a set of brand for VitNode. You can use them to promote VitNode.
 ## Colors
 
 <div className="flex gap-5 [&>div]:flex-1 [&>div]:p-5 [&>div]:rounded-sm my-5">
-  <div style={{ backgroundColor: '#0362c3' }}>
+  <div style={{ backgroundColor: "#0362c3" }}>
     <div className="text-lg font-semibold mb-5">Primary</div>
     <div>#0362c3</div>
     <div>3 98 195</div>
     <div>210.31deg 96.97% 38.82%</div>
   </div>
-  <div style={{ backgroundColor: '#0a0a0a', color: '#fafafa' }}>
+  <div style={{ backgroundColor: "#0a0a0a", color: "#fafafa" }}>
     <div className="text-lg font-semibold mb-5">Black</div>
     <div>#0a0a0a</div>
     <div>10 10 10</div>
     <div>0deg 3.92% 96.08%</div>
   </div>
-  <div style={{ backgroundColor: '#fafafa', color: '#0a0a0a' }}>
+  <div style={{ backgroundColor: "#fafafa", color: "#0a0a0a" }}>
     <div className="text-lg font-semibold mb-5">White</div>
     <div>#fafafa</div>
     <div>250 250 250</div>
