--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,27 +1,9 @@
 import Image from "next/image";
 import { Cards, Card } from "nextra/components";
 
-import image1 from "@/assets/screenshots/1.png";
-import image2 from "@/assets/screenshots/2.png";
-import image12 from "@/assets/screenshots/12.png";
-import image8 from "@/assets/screenshots/8.png";
-import image3 from "@/assets/screenshots/3.png";
-
 # Welcome to VitNode 👋
 
 VitNode is a CMS built with [NextJS](https://nextjs.org/) and [NestJS](https://nestjs.com/). It is designed to be a scalable and flexible platform for creating community-driven websites and applications.
-
-## 🖼️ Screenshots
-
-<div className="flex flex-col gap-5 my-5">
-  <Image src={image1} alt="Topic in Forum Page (Dark Mode)" />
-  <Image src={image2} alt="Topic in Forum Page (Light Mode)" />
-  <Image src={image12} alt="Groups page in AdminCP" />
-  <Image src={image8} alt="Create Topic" />
-  <Image src={image3} alt="Change Avatar" />
-</div>
-
-More screenshots you can find in the [Screenshots Page](/screenshots).
 
 ## 🎸 Main Features
 
@@ -60,8 +42,5 @@ If you like this project, please consider supporting it by giving it a star on G
 ## Join to the community
 
 <Cards>
-  <Card
-    title="GitHub"
-    href="https://github.com/aXenDeveloper/vitnode/discussions"
-  />
+  <Card title="GitHub" href="https://github.com/aXenDeveloper/vitnode/discussions" />
 </Cards>
