--- a/pages/docs/plugins/i18n.mdx
+++ b/pages/docs/plugins/i18n.mdx
@@ -53,11 +53,9 @@ export const core_nav_name = pgTable(
       }),
     value: varchar("value", { length: 100 }).notNull()
   },
-  table => ({
+  (table) => ({
     item_id_idx: index("core_nav_name_item_id_idx").on(table.item_id),
-    language_code_idx: index("core_nav_name_language_code_idx").on(
-      table.language_code
-    )
+    language_code_idx: index("core_nav_name_language_code_idx").on(table.language_code)
   })
 );
 ```
@@ -173,11 +171,7 @@ import { ShowCoreNav } from "@/plugins/core/nav/show/dto/show.obj";
 export class CreateAdminNavService {
   constructor(private databaseService: DatabaseService) {}
 
-  async create({
-    external,
-    href,
-    icon
-  }: CreateAdminNavArgs): Promise<ShowCoreNav> {
+  async create({ external, href, icon }: CreateAdminNavArgs): Promise<ShowCoreNav> {
     const nav = await this.databaseService.db
       .insert(core_nav)
       .values({
@@ -204,11 +198,7 @@ import { Injectable } from "@nestjs/common";
 import { CreateAdminNavArgs } from "./dto/create.args";
 
 import { DatabaseService } from "@/plugins/database/database.service";
-import {
-  core_nav,
-  core_nav_description,
-  core_nav_name
-} from "../../database/schema/nav";
+import { core_nav, core_nav_description, core_nav_name } from "../../database/schema/nav";
 import { ShowCoreNav } from "@/plugins/core/nav/show/dto/show.obj";
 import { ParserTextLanguageCoreHelpersService } from "@/plugins/core/helpers/text_language/parser/parser.service";
 
@@ -256,13 +246,72 @@ export class CreateAdminNavService {
 
 ### Edit
 
-If you want to edit record, you can use the same `ParserTextLanguageCoreHelpersService` service.
+If you want to edit record, you can use the same `ParserTextLanguageCoreHelpersService` service and `parse` method.
+
+### Delete
+
+test
 
 </Steps>
 
 ## Delete Mutation
 
-If you add `onDelete: Cascade` action to relation, you don't have to do anything. When you delete main record, all translations will be deleted.
+To delete a record with translations, you have to process data form translation table first. You have to using `ParserTextLanguageCoreHelpersService` service and `delete` method. Remember to delete translations first, then delete main record.
+
+```ts {8-9, 15, 33-36, 38-41}
+import { Injectable } from "@nestjs/common";
+import { eq } from "drizzle-orm";
+
+import { DeleteAdminNavArgs } from "./dto/delete.args";
+
+import { DatabaseService } from "@/plugins/database/database.service";
+import { NotFoundError } from "@/utils/errors/not-found-error";
+import { core_nav, core_nav_description, core_nav_name } from "../../database/schema/nav";
+import { ParserTextLanguageCoreHelpersService } from "@/plugins/core/helpers/text_language/parser/parser.service";
+
+@Injectable()
+export class DeleteAdminNavService {
+  constructor(
+    private databaseService: DatabaseService,
+    private parserTextLang: ParserTextLanguageCoreHelpersService
+  ) {}
+
+  async delete({ id }: DeleteAdminNavArgs): Promise<string> {
+    const nav = await this.databaseService.db.query.core_nav.findFirst({
+      where: (table, { eq }) => eq(table.id, id)
+    });
+
+    if (!nav) {
+      throw new NotFoundError("Nav");
+    }
+
+    // Update parent_id to 0
+    await this.databaseService.db
+      .update(core_nav)
+      .set({ parent_id: 0 })
+      .where(eq(core_nav.parent_id, id));
+
+    await this.parserTextLang.delete({
+      database: core_nav_name,
+      item_id: id
+    });
+
+    await this.parserTextLang.delete({
+      database: core_nav_description,
+      item_id: id
+    });
+
+    // Delete nav
+    await this.databaseService.db.delete(core_nav).where(eq(core_nav.id, id));
+
+    return "Success!";
+  }
+}
+```
+
+This method process data from translation table like remove attachments, mentions etc. but cannot remove translation table itself. That's why we have `onDelete: 'cascade'` action into references in schema.
+
+If your input field is only string, but not from editor you don't need to using `ParserTextLanguageCoreHelpersService` service.
 
 ## Frontend
 
