feat: Add home page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,46 +1,3 @@
-import Image from "next/image";
-import { Cards, Card } from "nextra/components";
+import { HomeView } from "@/views/home/home-view";
 
-# Welcome to VitNode 👋
-
-VitNode is a CMS built with [NextJS](https://nextjs.org/) and [NestJS](https://nestjs.com/). It is designed to be a scalable and flexible platform for creating community-driven websites and applications.
-
-## 🎸 Main Features
-
-- **Open Source**: Core and Forum Plugin VitNode is open source and free to use,
-- **Multi-languages Content**: Create content in multiple languages and translate them easily,
-- **Themes System**: Customize the look and feel of the website with Tailwind CSS and Shadcn UI,
-- **Plugins System**: Extend the functionality of the platform with plugins,
-- **Community System**: Create a community around your website with the forum plugin,
-- **SEO Friendly**: Optimize your website for search engines with built-in SEO tools _(Enable soon)_,
-- **Developer Friendly**: Built with modern technologies and best practices
-
-## Goal of VitNode
-
-The goal of VitNode is to provide a flexible and scalable platform for creating community-driven websites and applications. It is designed to be easy to use and developer-friendly, with a focus on performance and extensibility thanks to [NextJS](https://nextjs.org/) and [NestJS](https://nestjs.com/).
-
-## Enable Plugins
-
-- **Forum** - Advanced community system
-
-## Incoming Plugins
-
-Here are some of the plugins if feedback about the project is positive:
-
-- **Commerce** Create an online store with VitNode,
-- **Fles** - Manage files and media with VitNode,
-- **Blog** - Create a blog with VitNode
-
-Send your feedback to [GitHub Discussions](https://github.com/aXenDeveloper/vitnode/discussions)! 🚀
-
-## 🫶 Support this project
-
-If you like this project, please consider supporting it by giving it a star on GitHub and sharing it with your friends and colleagues. You can also contribute to the project by submitting bug reports, feature requests, and pull requests.
-
-[You can also be a sponsor](https://github.com/sponsors/aXenDeveloper) to support the development of this project.
-
-## Join to the community
-
-<Cards>
-  <Card title="GitHub" href="https://github.com/aXenDeveloper/vitnode/discussions" />
-</Cards>
+<HomeView />
