feat: Add search for database

--- a/pages/docs/plugins/database/overview.mdx
+++ b/pages/docs/plugins/database/overview.mdx
@@ -304,6 +304,8 @@ When you change your schema, VitNode will automatically create schema for migrat
 VitNode provide a few helpers functions to help you build your query. We recommend using this helpers functions to build your query.
 
 <Cards>
-  <Card title="Pagination" href="/plugins/database/pagination" />
-  <Card title="Ordering" href="/plugins/database/ordering" />
+  <Card title="Pagination" href="/docs/plugins/database/pagination" />
+  <Card title="Ordering" href="/docs/plugins/database/ordering" />
+  <Card title="Sorting" href="/docs/plugins/database/sorting" />
+  <Card title="Search" href="/docs/plugins/database/search" />
 </Cards>
