--- a/pages/docs/themes/components/data-table.mdx
+++ b/pages/docs/themes/components/data-table.mdx
@@ -15,7 +15,7 @@ Actions has own wrapper for class which add `flex` and `gap` to the children.
 
 ## Filters
 
-Test
+Not implemented yet.
 
 ## Infinite Scroll
 
