--- a/pages/docs/themes/components/icons.mdx
+++ b/pages/docs/themes/components/icons.mdx
@@ -1,3 +1,5 @@
+import { Callout } from "nextra/components";
+
 # Icons
 
 VitNode uses [Lucide Icons](https://lucide.dev/icons/) and Emoji as icons. We're created a few components to help you use them.
@@ -28,6 +30,28 @@ import { Icon, type IconLucideNames } from "@/components/icon/icon";
 
 return <Icon name="Home" />;
 ```
+
+<Callout type="warning" emoji="⚠️">
+  Dynamic icons works only with Server Side Rendering _(SSR)_.
+</Callout>
+
+### Dynamic Icon on Client Side
+
+We also allow to using dynamic icon on client side. You can use this component.
+
+```tsx
+import { IconClient } from "@/components/icon/icon-client";
+
+return <IconClient name="Home" />;
+```
+
+<Callout type="error" emoji="❌">
+  Please avoid using this component. It's not recommended. Use this only if you
+  really (REALLY!!!) need it.
+
+This component will download all icons from Lucide Icons to client.
+
+</Callout>
 
 ## Icon Input
 
